# union-backend

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: docker-image.yml  docker-publish.yml
src/: html_builder.rs  main.rs  mysql_init.rs  static_interface.rs  union_structs.rs
