[package]
name = "union"
version = "0.1.0"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web={version="4.0.0-beta.8", features = ["rustls"]}
rustls="*"
actix-rt="*"
tokio-tungstenite="*"   
tokio={version="*", features=["fs"]}
serde_json="*"
futures-util="*"
union_structs={ git="ssh://git@github.com/Somebody62/union_structs", branch="main", version="7.0.0"}
serde="*"
