[package]
name = "union"
version = "0.1.0"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web={version="4.0.0-beta.8", features = ["rustls"]}
actix-web-actors="4.0.0-beta.6"
actix="0.12.0"
rustls="0.19.1"
actix-rt="2.2.0" 
tokio={version="1.10.0", features=["fs"]}
serde_json="1.0.66"
futures-util="0.3.16"
mysql_async="0.28.0"
serde="1.0.128"
