[package]
name = "union"
version = "0.1.0"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web={version="4.0.0-beta.8", features = ["rustls"]}
actix-web-actors="4.0.0-beta.6"
actix="0.12.0"
rustls="0.19.1"
actix-rt="2.2.0" 
tokio={version="1.10.0", features=["fs"]}
serde_json="1.0.66"
futures-util="0.3.16"
mysql="21.0.1"
serde="1.0.128"
scrypt="0.7.0"
rand_core="0.6.3"
rand="0.8.4"
regex="1.5.4"
lazy_static="1.4.0"
base64="0.13.0"
